Fix spacing after title

--- a/client/reader/search-stream/style.scss
+++ b/client/reader/search-stream/style.scss
@@ -126,13 +126,6 @@ $reader-related-card-v2-breakpoint-small: "( max-width: 535px )";
 		}
 	}
 
-	.has-excerpt {
-
-		.reader-related-card-v2__title {
-			margin-bottom: 7px;
-		}
-	}
-
 	.reader-related-card-v2__featured-image {
 		margin: 0 0 17px;
 
